--- a/C&RManagement/app/src/main/res/values/colors.xml
+++ b/C&RManagement/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#FFC000</color>
+    <color name="lightgray">#E3E3E3</color>
+    <color name="blue">#0739E4</color>
+    <color name="red">#FF0000</color>
 </resources>
