--- a/C&RManagement/app/src/main/res/layout/ongoingorder_item.xml
+++ b/C&RManagement/app/src/main/res/layout/ongoingorder_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
@@ -24,7 +24,7 @@
         android:id="@+id/done"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="DONE"
+        android:text="Done"
         android:layout_weight="1"
         />
 
