--- a/C&RManagement/app/src/main/res/layout/fragment_table.xml
+++ b/C&RManagement/app/src/main/res/layout/fragment_table.xml
@@ -17,7 +17,7 @@
     </FrameLayout>
 
     <TextView
-        android:id="@+id/ttlcsttxt"
+        android:id="@+id/totalCostTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Total Cost: "
@@ -38,7 +38,7 @@
         android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ttlcsttxt"
+        app:layout_constraintTop_toBottomOf="@id/totalCostTxt"
         android:columnCount="2"
         android:rowCount="2"
         android:layout_margin="30dp"
@@ -73,14 +73,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textAlignment="center"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_marginEnd="5dp"
             android:textSize="30sp"
             android:background="@drawable/back"
-            android:text="Orders"
-            android:clickable="true"/>
+            android:text="See Orders"
+            android:clickable="true"
+            />
         <TextView
             android:id="@+id/addorder"
             android:layout_width="0dp"
