database operations update

--- a/C&RManagement/app/src/main/res/layout/activity_navigation_menu.xml
+++ b/C&RManagement/app/src/main/res/layout/activity_navigation_menu.xml
@@ -28,9 +28,11 @@
         android:id="@+id/backMenuButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/orange"
         android:text="Back Menu"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:cornerRadius="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/name"
