--- a/C&RManagement/app/src/main/res/layout/activity_login.xml
+++ b/C&RManagement/app/src/main/res/layout/activity_login.xml
@@ -81,6 +81,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Login"
+        android:backgroundTint="@color/orange"
+        app:cornerRadius="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/password" />
