--- a/C&RManagement/app/src/main/res/layout/food_item.xml
+++ b/C&RManagement/app/src/main/res/layout/food_item.xml
@@ -39,8 +39,10 @@
             android:id="@+id/addAddButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/orange"
             android:text="+"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            app:cornerRadius="0dp" />
 
         <TextView
             android:id="@+id/addAmountText"
@@ -54,8 +56,10 @@
             android:id="@+id/addMinusButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/orange"
             android:text="-"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            app:cornerRadius="0dp" />
 
     </LinearLayout>
 
