--- a/C&RManagement/app/src/main/res/layout/fragment_ongoing_orders.xml
+++ b/C&RManagement/app/src/main/res/layout/fragment_ongoing_orders.xml
@@ -31,11 +31,12 @@
         android:id="@+id/ongoingOrderDoneButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/orange"
         android:text="Done"
+        app:cornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
