--- a/C&RManagement/app/src/main/res/layout/seciton_item.xml
+++ b/C&RManagement/app/src/main/res/layout/seciton_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/sectionButton"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/sectionButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:backgroundTint="@color/orange"
     app:cornerRadius="0dp">
 
 </Button>
