--- a/C&RManagement/app/src/main/res/layout/table.xml
+++ b/C&RManagement/app/src/main/res/layout/table.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/tableButton"
     android:layout_width="100dp"
     android:layout_height="100dp"
     android:layout_margin="10dp"
-    android:background="@drawable/squarebutton"
-    android:textColor="#FFFFFF"
+    android:backgroundTint="@color/orange"
+    android:clickable="true"
     android:gravity="center"
+    android:textColor="#FFFFFF"
     android:textSize="18sp"
-    android:clickable="true"/>
+    app:cornerRadius="0dp" />
